--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "axios": "^1.3.4",
     "echarts": "^5.4.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
