--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "axios": "^1.3.4",
+    "clipboard": "^2.0.11",
     "echarts": "^5.4.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "sass-resources-loader": "^2.2.5",
-    "svg-sprite-loader": "^6.0.11"
+    "svg-sprite-loader": "^6.0.11",
+    "vue-markdown-loader": "^2.5.0"
   },
   "eslintConfig": {
     "root": true,
