--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6"
   },
@@ -23,11 +24,15 @@
     "@vue/cli-service": "~5.0.0",
     "axios": "^1.3.4",
     "clipboard": "^2.0.11",
+    "copy-webpack-plugin": "^11.0.0",
     "echarts": "^5.4.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "mars3d": "^3.4.26",
+    "mars3d-heatmap": "^3.4.26",
+    "mars3d-tdt": "^3.4.26",
     "sass-resources-loader": "^2.2.5",
     "svg-sprite-loader": "^6.0.11",
     "vue-markdown-loader": "^2.5.0"
