--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "echarts": "^5.4.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "github-markdown-css": "^5.2.0",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "mars3d": "^3.4.26",
