--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mars3d-heatmap": "^3.4.26",
     "mars3d-tdt": "^3.4.26",
     "qs": "^6.11.1",
+    "resize-observer-polyfill": "^1.5.1",
     "sass-resources-loader": "^2.2.5",
     "svg-sprite-loader": "^6.0.11",
     "vue-markdown-loader": "^2.5.0",
