--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "github-markdown-css": "^5.2.0",
+    "highlight.js": "^11.7.0",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "qs": "^6.11.1",
