--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "axios": "^1.3.4",
+    "better-scroll": "^2.5.1",
     "clipboard": "^2.0.11",
     "copy-webpack-plugin": "^11.0.0",
     "echarts": "^5.4.1",
