--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clipboard": "^2.0.11",
     "copy-webpack-plugin": "^11.0.0",
     "echarts": "^5.4.1",
+    "echarts-gl": "^2.0.9",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "github-markdown-css": "^5.2.0",
