--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vue/cli-service": "~5.0.0",
     "axios": "^1.3.4",
     "better-scroll": "^2.5.1",
+    "cesium": "^1.107.2",
     "clipboard": "^2.0.11",
     "copy-webpack-plugin": "^11.0.0",
     "echarts": "^5.4.1",
