--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "lib": "vue-cli-service build --target lib --name sapi-components --dest lib ./src/components/index.js"
+    "lib": "vue-cli-service build --target lib --name sapi-components --dest lib ./packages/index.js"
   },
   "dependencies": {
     "core-js": "^3.8.3",
