--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "eslint-plugin-vue": "^8.0.3",
     "github-markdown-css": "^5.2.0",
     "highlight.js": "^11.7.0",
+    "html2canvas": "^1.4.1",
+    "js-web-screen-shot": "^1.9.9-rc.18",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "lodash": "^4.17.21",
